--- a/home/templates/home/round_page.html
+++ b/home/templates/home/round_page.html
@@ -22,17 +22,40 @@
 
 	<p>For the current list of internships, <a href="/apply/project-selection">see the current round page</a></p>
        
-       <p>The timeline for this round is:</p>
+	<p>The timeline for this round is:</p>
 
-    <table class=table>
-        <tr><td>{{ page.specific.landingdue }}</td><td>Most FOSS communities will be listed</td></tr>
-        <tr><td>{{ page.specific.appsopen }}</td><td>Applications open</td></tr>
-        <tr><td>{{ page.specific.lateorgs }}</td><td>Last date for new FOSS community listings</td></tr>
-        <tr><td>{{ page.specific.appsclose }}</td><td>Applications and contributions deadline</td></tr>
-        <tr><td>{{ page.specific.appslate }}</td><td>Deadline for late applications and contributions for specific projects (see below for which projects are accepting late applications)</td></tr>
-        <tr><td>{{ page.specific.appsclose }} to {{ page.specific.internannounce }}</td><td>Applicants are encouraged to continue making contributions for the project they applied for</td></tr>
-        <tr><td>{{ page.specific.internannounce }}</td><td>Accepted interns announced on this page at 4pm UTC</td></tr>
-	<tr><td>{{ page.specific.internstarts }} to {{ page.specific.internends }}</td><td>Internships period</td></tr>
-    </table>
-    {{ page.specific.sponsordetails|richtext }}
+	<table class=table>
+		<tr><td>{{ page.specific.landingdue }}</td><td>Most FOSS communities will be listed</td></tr>
+		<tr><td>{{ page.specific.appsopen }}</td><td>Applications open</td></tr>
+		<tr><td>{{ page.specific.lateorgs }}</td><td>Last date for new FOSS community listings</td></tr>
+		<tr><td>{{ page.specific.appsclose }}</td><td>Applications and contributions deadline</td></tr>
+		<tr><td>{{ page.specific.appslate }}</td><td>Deadline for late applications and contributions for specific projects (see below for which projects are accepting late applications)</td></tr>
+		<tr><td>{{ page.specific.appsclose }} to {{ page.specific.internannounce }}</td><td>Applicants are encouraged to continue making contributions for the project they applied for</td></tr>
+		<tr><td>{{ page.specific.internannounce }}</td><td>Accepted interns announced on this page at 4pm UTC</td></tr>
+		<tr><td>{{ page.specific.internstarts }} to {{ page.specific.internends }}</td><td>Internships period</td></tr>
+	</table>
+	<h2>Intern Payment Schedule</h2>
+	<table class=table>
+		<tr><td>{{ page.internstarts }}</td><td>Internships starts</td></tr>
+		<tr><td>{{ page.initial_stipend_payment_deadline }}</td><td>Interns who have started their internship will receive the $500 initial stipend</td></tr>
+		<tr><td>{{ page.midfeedback }} </td><td>Mid-point feedback due</td></tr>
+		<tr><td>{{ page.midpoint_stipend_payment_deadline }}</td><td>Interns with successful mid-point feedback will receive the $2,250 midpoint stipend</td></tr>
+		<tr><td>{{ page.internends }}</td><td>Internships end</td></tr>
+		<tr><td>{{ page.finalfeedback }} </td><td>Final feedback due</td></tr>
+		<tr><td>{{ page.final_stipend_payment_deadline }}</td><td>Interns with successful final feedback will receive the $2,750 midpoint stipend</td></tr>
+	</table>
+	{{ page.specific.sponsordetails|richtext }}
+
+	{% with communities=page.get_approved_communities %}
+	{% if communities %}
+		<h1>Past Participating Communities</h1>
+		{% for community in page.get_approved_communities %}
+			<h4>{{ community.name }}</h4>
+			<p>{{ community.description }}</p>
+			{% if page.has_intern_announcement_deadline_passed %}
+				<p>Learn more on the <a href="{% url 'community-landing' round_slug=page.slug slug=community.slug %}">{{ community.name }} community landing page</a>.</p>
+			{% endif %}
+		{% endfor %}
+	{% endif %}
+	{% endwith %}
 {% endblock %}
