Separate out license and other requirements for projects

--- a/home/templates/home/snippet/license-requirements.html
+++ b/home/templates/home/snippet/license-requirements.html
@@ -1,3 +1,5 @@
 <p>Outreachy internship projects must be released under either an <a href="https://opensource.org/licenses/alphabetical">OSI-approved open source license</a> that is also identified by the FSF as a <a href="https://www.gnu.org/licenses/license-list.html">free software license</a>, OR a <a href="https://creativecommons.org/share-your-work/public-domain/freeworks/">Creative Commons license approved for free cultural works</a>.</p>
 
-<p>Outreachy internship projects must forward the interests of free and open source software, not proprietary software. Outreachy internship projects will need to meet additional <a href="/mentor/mentor-faq/#define-a-project">Outreachy intern project requirements</a>.</p>
+<p>Outreachy internship projects must forward the interests of free and open source software, not proprietary software.</p>
+
+<p>Please make sure to read through the mentor FAQ for <a href="/mentor/mentor-faq/#define-a-project">tips on what makes a good project</a>.</p>
