--- a/home/templates/home/project_skills_form.html
+++ b/home/templates/home/project_skills_form.html
@@ -5,6 +5,20 @@ Add Project Skills
 {% endblock %}
 
 {% block content %}
+<p><a href="{% url 'community-cfp' %}">Timeline, FAQ, & Participating Communities</a> &gt; 
+<a href="{% url 'community-landing' round_slug='project.project.round.slug' slug='project.community.slug' %}">{{ project.project_round.community.name }}</a> &gt;
+{{ view.kwargs.action|title }} a Project
+</p>
+
+<p>Steps to {{ view.kwargs.action|title|lower }} a Project:
+<ol>
+	<li>Project details</li>
+	<li>Mentor profile</li>
+	<b><li>Project skills</li></b>
+	<li>Project communication channels</li>
+</ol>
+You can always edit this information later.
+</p>
 <h1>Add Project Skills</h1>
 
 <p>Outreachy applicants often search for projects that fit the skills
@@ -15,15 +29,60 @@ they are. Applicants with imposter syndrome will often believe they need
 to be an "expert" in a particular skill in order to apply. Listing
 skills this way enourages people to apply.</p>
 
+<p>Please do not list more than one skill in the skill description.</p>
+
+<p>Please do not place educational restrictions (such as needing a degree) on this project. Outreachy applicants are judged on their demonstrated skills, not on their educational background. If your project requires knowledge that would normally be learned during a degree, your project contribution tasks should test applicants for that knowledge.</p>
+
 <p>You can fill out the optional fields below. If you need to add more
 skills than there are fields, you should save this internship project
 proposal and then click 'Edit Project information'.</p>
 
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form.media }}
-    {{ form.as_p }}
-    <input class="btn btn-primary" type="submit" value="Save project skills" />
-</form>
+<p><form action="" method="post">
+	{% csrf_token %}
+	{{ form.management_form }}
+	{% for f in form %}
+		{% with forloop.counter as skill_number %}
+		<h2>Project Skill #{{ skill_number }}</h2>
+		{{ f.media }}
+		{% for field in f.visible_fields %}
+			{% if 'Funding secured' in field.label_tag %}
+				<div class="form-group card">
+					<div class="card-header">
+						Project Skill #{{ skill_number }} - {{ field.label_tag }}
+					</div>
+					<div class="card-body">
+						{{ field }}
+						{{ field.help_text|safe }}
+					</div>
+				</div>
+			{% elif 'Delete' in field.label_tag %}
+				<div class="form-group card border-warning">
+					<div class="card-header text-white bg-warning">
+						Delete Project Skill #{{ skill_number }}?
+					</div>
+					<div class="card-body">
+						{{ field }} Check this box to delete this skill information.
+						{{ field.help_text|safe }}
+					</div>
+				</div>
+			{% else %}
+				<div class="form-group card">
+					{{ field.errors }}
+					<div class="card-header">
+						Project Skill #{{ skill_number }} - {{ field.label_tag }}
+					</div>
+					<div class="card-body">
+						{{ field }}
+					</div>
+					{% if field.help_text %}
+						<div class="card-footer bg-white">{{ field.help_text|safe }}</div>
+					{% endif %}
+				</div>
+			{% endif %}
+		{% endfor %}
+		{% endwith %}
+	{% endfor %}
+	<input class="btn btn-primary" type="submit" value="Save project skills" />
+</form></p>
 
 {% endblock %}
