--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -7,6 +7,10 @@ Dashboard
 
 {% block content %}
 
+<p>Hi, {{ request.user.comrade.public_name|default:request.user.username }}!</p>
+
+<p><a href="{% url 'account' %}"><button type="button" class="btn btn-info">Edit Profile</button></a><a href="{% url 'logout' %}"><button type="button" class="btn btn-secondary ml-3">Log out</button></a></p>
+
 {% if groups %}
 <p>You have actions you need to take. <a href="#actions">See all actions.</a></p>
 {% endif %}
