Eligiblity page should mention W8-BEN and W-9

--- a/home/templates/home/eligibility.html
+++ b/home/templates/home/eligibility.html
@@ -11,13 +11,13 @@
 &gt; <a href="/apply/project-selection/">Find a Mentor and Internship Project</a></p>
 </p>
 
-<p>All accepted interns must sign an <a href="/documents/5/Outreachy-Program--Internship-Terms-of-Participation-December-2017.pdf">intern agreement</a>. This is a legal document that certifies you are eligible to apply for Outreachy, and that all the eligibility information you supply in your application is truthful. It is fraud if you sign this legal document after supplying incorrect information.</p>
+<p>All accepted interns must sign an <a href="/documents/5/Outreachy-Program--Internship-Terms-of-Participation-December-2017.pdf">intern agreement</a>. This is a legal document that certifies you are eligible to apply for Outreachy, and that all the eligibility information you supply in your application is truthful. All accepted interns will need to fill out either a W8-BEN or a W-9 tax form. It is fraud if you sign these legal documents after supplying incorrect information.</p>
 
 <h2>Outreachy Eligibility Rules</h2>
 <p>Outreachy is open internationally to people who meet the following requirements:<p>
 <ul>
 	<li>You are or will be 18 years of age or older by {{ current_round.internstarts }}</li>
-	<li>You have not previously participated in an Outreachy, Outreach Program for Women, or Google Summer of Code internship.</li>
+	<li>You have not previously participated in an Outreachy, Outreach Program for Women, or Google Summer of Code internship. If you did not finish your Google Summer of Code internship, you are ineligible for Outreachy.</li>
 	<li>You are available for a full-time, 40 hours a week internship from {{ current_round.internstarts }} to {{ current_round.internends }}.</li>
 	<li>You must meet one of the following criteria:</li>
 	<ul>
