--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -163,7 +163,7 @@
 						<a class="dropdown-item" href="/apply/">Application Process</a>
 						<a class="dropdown-item" href="{% url 'dashboard' %}">My Application</a>
 						<a class="dropdown-item" href="{% url 'project-selection' %}">Current Projects</a>
-						<a class="dropdown-item" href="/apply/rounds/">Past Projects</a>
+						<a class="dropdown-item" href="{% url 'past-rounds' %}">Past Projects</a>
 						<a class="dropdown-item" href="/opportunities/">Other Opportunties</a>
 					</div>
 				</li>
@@ -175,7 +175,7 @@
 						<a class="dropdown-item" href="/mentor/">Volunteering FAQ</a>
 						<a class="dropdown-item" href="{% url 'dashboard' %}">My Mentored Projects</a>
 						<a class="dropdown-item" href="{% url 'project-selection' %}">Current Projects</a>
-						<a class="dropdown-item" href="/apply/rounds/">Past Projects</a>
+						<a class="dropdown-item" href="{% url 'past-rounds' %}">Past Projects</a>
 						<a class="dropdown-item" href="{% url 'community-cfp' %}">Add A Community</a>
 						<a class="dropdown-item" href="{% url 'community-cfp' %}">Submit A Project</a>
 						<a class="dropdown-item" href="{% url 'community-cfp' %}">Co-mentor A Project</a>
